--- a/blogger-django/blog/static/blog/css/style.css
+++ b/blogger-django/blog/static/blog/css/style.css
@@ -48,6 +48,12 @@ nav a {
   font-family: Athelas, STHeiti, Microsoft Yahei, serif;
 }
 
+.article a {
+    text-decoration: none;
+    color: #1abc9c;
+}
+
+
 .tag-post-title a:before, .archive-post-title a:before, .links a:before {
   content: "";
   position: absolute;
@@ -241,6 +247,11 @@ a:hover {
     color: #000;
     font-family: Athelas, STHeiti, Microsoft Yahei, serif;
 }
+
+body .wrap .top {
+  margin-top: 20px;
+}
+
 
 body .wrap .top nav {
     text-align: right;
