--- a/blogger-django/blog/templates/blog/base.html
+++ b/blogger-django/blog/templates/blog/base.html
@@ -41,6 +41,10 @@
                     </li>
 
                     <li>
+                      <a href="{% url 'blog:links' %}">Links</a>
+                    </li>
+
+                    <li>
                       <a href="{% url 'blog:about' %}">About</a>
                     </li>
 
