--- a/blogger-django/blog/templates/blog/home.html
+++ b/blogger-django/blog/templates/blog/home.html
@@ -35,6 +35,10 @@
                     </li>
 
                     <li>
+                      <a href="{% url 'blog:links' %}">Links</a>
+                    </li>
+
+                    <li>
                       <a href="{% url 'blog:about' %}">About</a>
                     </li>
 
